# memento

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  reviewer.yml
demo/: with_memento_with_error.py  with_memento_without_error.py  without_memento.py
docs/: index.rst  memento.rst  slurm.dot
memento/: __init__.py  caching.py  checkpoint.py  configurations.py  exceptions.py  main.py  memento.py  metric.py  notifications.py  parallel.py  slurm.py  task_graph.py  task_interface.py
slurm-docker-cluster/: .git_old  Dockerfile  Dockerfile.memento  docker-compose.yml  slurm.conf
tests/: __init__.py  test_caching.py  test_configurations.py  test_memento.py  test_metric.py  test_notifications.py  test_parallel.py  test_run.py  test_slurm.py  test_task_interface.py
